<resources>
    <string name="app_name">Pacman</string>
    <string name="points">Points:</string>
    <string name="move_right">→</string>
    <string name="move_left">←</string>
    <string name="move_up">↑</string>
    <string name="move_down">↓</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="pausegame">Pause</string>
    <string name="levelTimer">Time left:</string>
</resources>
